--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -11,47 +11,102 @@
         android:id="@+id/vp_home_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/rgLayout_home_bottom_menu" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@+id/rgLayout_home_bottom_menu"
-        android:background="@color/color_d2d2d2" />
+        android:layout_above="@+id/fLayout_new_home_bottom_menu" />
 
 
-    <RadioGroup
-        android:id="@+id/rgLayout_home_bottom_menu"
+    <FrameLayout
+        android:id="@+id/fLayout_new_home_bottom_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+
+        <RadioGroup
+            android:id="@+id/rgLayout_home_bottom_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/color_f9f9f9"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/btn_home_list"
+                style="@style/home_bottom_radio_style"
+                android:checked="true"
+                android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
+                android:paddingBottom="7dp"
+                android:text="@string/item_jf_dog" />
+
+            <RadioButton
+                android:id="@+id/btn_home_wonderful"
+                style="@style/home_bottom_radio_style"
+                android:drawableTop="@drawable/icon_bottom_wonderful_selector"
+                android:paddingBottom="7dp"
+                android:text="@string/item_wonder" />
+
+            <RadioButton
+                android:id="@+id/btn_home_mine"
+                style="@style/home_bottom_radio_style"
+                android:drawableTop="@drawable/icon_bottom_mine_selector"
+                android:paddingBottom="7dp"
+                android:text="@string/item_mine" />
+        </RadioGroup>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_d2d2d2" />
+    </FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/fLayout_wonderful_timeline"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:background="@color/color_f9f9f9"
-        android:orientation="horizontal">
+        android:visibility="gone">
 
-        <RadioButton
-            android:id="@+id/btn_home_list"
-            style="@style/home_bottom_radio_style"
-            android:checked="true"
-            android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
-            android:paddingBottom="9dp"
-            android:text="加菲狗" />
 
-        <RadioButton
-            android:id="@+id/btn_home_wonderful"
-            style="@style/home_bottom_radio_style"
+        <TextView
+            android:id="@+id/tv_time_line_pop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:drawableTop="@drawable/icon_bottom_wonderful_selector"
-            android:paddingBottom="9dp"
-            android:text="每日精彩" />
+            android:background="@drawable/time_line_pop"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textSize="11sp" />
 
-        <RadioButton
-            android:id="@+id/btn_home_mine"
-            style="@style/home_bottom_radio_style"
-            android:layout_alignParentRight="true"
-            android:drawableTop="@drawable/icon_bottom_mine_selector"
-            android:paddingBottom="9dp"
-            android:text="我的" />
-    </RadioGroup>
 
+        <RelativeLayout
+            android:id="@+id/rLayout_time_line_hot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tv_time_line_pop"
+            android:layout_marginTop="5dp"
+            android:background="@color/color_f6f9fa">
+
+            <View
+                android:id="@+id/v_simple_38line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_d2d2d2" />
+
+
+            <com.cylan.jiafeigou.widget.wheel.WheelView
+                android:id="@+id/wv_wonderful_timeline"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/v_simple_38line"
+                android:layout_marginTop="5dp" />
+
+            <View
+                android:layout_width="3dp"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/color_36bdff" />
+
+        </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
