--- a/app/src/main/res/layout/fragment_splash_layout.xml
+++ b/app/src/main/res/layout/fragment_splash_layout.xml
@@ -1,24 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_splash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:orientation="vertical">
+    android:background="@android:color/white"
+    android:gravity="center">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_splash_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <com.cylan.viewindicator.CirclePageIndicator
-        android:id="@+id/v_indicator"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        hunt:fillColor="#000eee"
-        hunt:radius="5dp"
-        hunt:strokeColor="#ffffff" />
-</RelativeLayout>
+</TextView>
