--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,7 @@
     <color name="color_36bdff">#36BDFF</color>
 
     <color name="color_d2d2d2">#D2D2D2</color>
+    <color name="color_dde0e5">#DDE0E5</color>
     <color name="color_d8d8d8">#D8D8D8</color>
     <color name="color_f9f9f9">#F9F9F9</color>
     <color name="color_f2f2f2">#F2F2F2</color>
