添加设备按钮，扩大点击区域

--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -19,17 +19,16 @@
 
     <include layout="@layout/fragment_home_page_list_header" />
 
-    <ImageButton
-        android:id="@+id/imgBtn_add_devices"
+    <ImageView
+        android:id="@+id/imgV_add_devices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_gravity="right"
         android:layout_marginBottom="13dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginTop="13dp"
-        android:background="@drawable/btn_common_add"
+        android:src="@drawable/btn_common_add"
         android:clickable="true"
         android:padding="10dp" />
 
