--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,12 +41,14 @@
     <color name="color_cecece">#CECECE</color>
     <color name="color_0ba8cf">#0BA8CF</color>
     <color name="color_f6f9fa">#F6F9FA</color>
+    <color name="color_f4f4f4">#F4F4F4</color>
 
 
     <color name="color_888888">#888888</color>
     <color name="color_788291">#788291</color>
     <color name="color_909090">#909090</color>
     <color name="color_666666">#666666</color>
+    <color name="color_383838">#383838</color>
 
 
 
