--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -1,5 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tim="http://schemas.android.com/apk/res-auto"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white">
@@ -28,18 +28,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                tim:sl_cornerRadius="56dp"
-                tim:sl_dx="0dp"
-                tim:sl_dy="2dp"
-                tim:sl_shadowColor="#88000000"
-                tim:sl_shadowRadius="2dp">
+                hunt:sl_cornerRadius="56dp"
+                hunt:sl_dx="0dp"
+                hunt:sl_dy="2dp"
+                hunt:sl_shadowColor="#88000000"
+                hunt:sl_shadowRadius="2dp">
 
                 <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
                     android:id="@+id/iv_home_mine_portrait"
                     android:layout_width="76dp"
                     android:layout_height="76dp"
                     android:src="@drawable/icon_mine_head_normal"
-                    tim:riv_oval="true" />
+                    hunt:riv_oval="true" />
             </com.cylan.jiafeigou.widget.wave.ShadowLayout>
 
             <TextView
@@ -47,8 +47,6 @@
                 style="@style/text_base_singleLine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/shadow_layout"
-                android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
                 android:layout_marginTop="13dp"
                 android:text="用户昵称"
@@ -92,38 +90,46 @@
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/home_mine_item_friend"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tim:leftDrawable="@drawable/icon_mine_friend"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="亲朋好友" />
+            android:layout_height="60dp"
+            hunt:leftDrawable="@drawable/icon_mine_friend"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="亲朋好友"
+            hunt:textColor="@color/color_333333"
+            hunt:textSize="16sp" />
 
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/home_mine_item_share"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tim:leftDrawable="@drawable/icon_mine_share"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="分享设备" />
+            android:layout_height="60dp"
+            hunt:leftDrawable="@drawable/icon_mine_share"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="分享设备"
+            hunt:textColor="@color/color_333333"
+            hunt:textSize="16sp" />
 
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/home_mine_item_help"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tim:leftDrawable="@drawable/icon_mine_hlep"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="帮助与反馈" />
+            android:layout_height="60dp"
+            hunt:leftDrawable="@drawable/icon_mine_hlep"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="帮助与反馈"
+            hunt:textColor="@color/color_333333"
+            hunt:textSize="16sp" />
 
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/home_mine_item_settings"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:clickable="true"
-            tim:leftDrawable="@drawable/icon_mine_setting"
-            tim:rightDrawable="@drawable/icon_mine_arrow_next"
-            tim:text="设置" />
+            hunt:leftDrawable="@drawable/icon_mine_setting"
+            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
+            hunt:text="设置"
+            hunt:textColor="@color/color_333333"
+            hunt:textSize="16sp" />
     </LinearLayout>
 
 </RelativeLayout>
