--- a/app/src/main/res/layout/layout_top_bar_item.xml
+++ b/app/src/main/res/layout/layout_top_bar_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fLayout_login_title_bar"
+    android:id="@+id/fLayout_top_bar"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@color/color_white">
@@ -32,6 +32,7 @@
         android:paddingRight="15dp"
         android:text="注册"
         android:textColor="@color/color_4b9fd5"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:visibility="gone" />
 
 </FrameLayout>
