--- a/app/src/main/res/layout/layout_wonderful_empty.xml
+++ b/app/src/main/res/layout/layout_wonderful_empty.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fLayout_login_title_bar"
+    android:id="@+id/fLayout_top_bar"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
