--- a/app/src/main/res/layout/fragment_bind_camera.xml
+++ b/app/src/main/res/layout/fragment_bind_camera.xml
@@ -5,13 +5,24 @@
     android:background="@color/color_white"
     tools:context="com.cylan.jiafeigou.n.view.bind.BindCameraFragment">
 
+    <include layout="@layout/layout_top_bar_item" />
+
+    <FrameLayout
+        android:id="@+id/fLayout_bind_device_list_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/fLayout_top_bar"
+        android:background="@color/color_white" />
+
     <TextView
         android:id="@+id/tv_main_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/fLayout_top_bar"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="长按WiFi键3s"
+        android:text="长按WiFi键"
         android:textColor="@color/color_333333"
         android:textSize="26sp" />
 
@@ -24,5 +35,63 @@
         android:gravity="center"
         android:text="等待蓝灯闪烁"
         android:textColor="@color/color_333333"
+        android:textSize="16sp" />
+
+    <android.support.v4.widget.Space
+        android:id="@+id/s_place_holder"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_centerInParent="true" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="240dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/image_camera">
+
+
+        <ImageView
+            android:id="@+id/imgV_camera_wifi_light_flash"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/ico_bind_camera_anim_flash_1" />
+
+        <ImageView
+            android:id="@+id/imgV_camera_red_dot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgV_camera_wifi_light_flash"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/image_red_dot"
+            android:visibility="invisible" />
+
+        <ImageView
+            android:id="@+id/imgV_camera_hand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/imgV_camera_red_dot"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/image_hand"
+            android:visibility="gone" />
+    </RelativeLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignTop="@+id/tv_bind_camera_tip"
+        android:background="@color/color_d8d8d8" />
+
+    <TextView
+        android:id="@+id/tv_bind_camera_tip"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:text="蓝灯已闪烁"
+        android:textColor="@color/color_4b9fd5"
         android:textSize="16sp" />
 </RelativeLayout>
