--- a/app/src/main/res/layout/layout_top_bar_item.xml
+++ b/app/src/main/res/layout/layout_top_bar_item.xml
@@ -6,7 +6,7 @@
     android:background="@color/color_white">
 
     <ImageView
-        android:id="@+id/iv_login_top_left"
+        android:id="@+id/iv_top_bar_left"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start|center_vertical"
@@ -15,7 +15,7 @@
         android:src="@drawable/btn_login_nav_close" />
 
     <TextView
-        android:id="@+id/tv_login_top_center"
+        android:id="@+id/tv_top_bar_center"
         style="@style/text_base_singleLine"
         android:layout_gravity="center"
         android:text="登录"
@@ -23,7 +23,7 @@
         android:textSize="22sp" />
 
     <TextView
-        android:id="@+id/tv_login_top_right"
+        android:id="@+id/tv_top_bar_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end|center_vertical"
