--- a/app/src/main/res/drawable/camera_wifi_light_flash.xml
+++ b/app/src/main/res/drawable/camera_wifi_light_flash.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:oneshot="false">
+    android:oneshot="false"
+    android:startOffset="1000">
     <item
         android:drawable="@drawable/ico_bind_camera_anim_flash_0"
         android:duration="300" />
