--- a/app/src/main/res/drawable/little_shape.xml
+++ b/app/src/main/res/drawable/little_shape.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><!-- 圆角矩形的红色背景shape -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/color_red" />
-    <corners android:radius="7dp" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape>
+            <gradient android:angle="270" android:endColor="#00ffffff" android:startColor="#FFcccccc" android:type="linear" />
+        </shape>
+    </item>
+</selector>
