--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -8,15 +8,16 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.activity.BindDeviceActivity">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_0ba8cf">
+        android:orientation="vertical">
 
         <FrameLayout
             android:id="@+id/fLayout_top_bar_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/color_0ba8cf">
 
             <ImageView
                 android:id="@+id/imgV_top_bar_left"
@@ -34,7 +35,12 @@
                 android:textColor="@color/color_white"
                 android:textSize="16sp" />
         </FrameLayout>
-    </FrameLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="@drawable/little_shape" />
+    </LinearLayout>
 
     <com.cylan.jiafeigou.widget.HomeMineItemView
         android:id="@+id/v_to_scan_qrcode"
