--- a/app/src/main/res/layout/fragment_bind_doorbell.xml
+++ b/app/src/main/res/layout/fragment_bind_doorbell.xml
@@ -22,6 +22,7 @@
         android:textSize="26sp" />
 
     <TextView
+        android:id="@+id/tv_bind_wait_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_main_content"
@@ -33,6 +34,7 @@
         android:textSize="16sp" />
 
     <FrameLayout
+        android:layout_below="@+id/tv_bind_wait_msg"
         android:layout_marginTop="40dp"
         android:id="@+id/fLayout_flip_layout"
         android:layout_width="wrap_content"
