--- a/app/src/main/res/layout/fragment_home_page_list.xml
+++ b/app/src/main/res/layout/fragment_home_page_list.xml
@@ -28,8 +28,9 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="3dp"
-        android:src="@drawable/btn_common_add"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:src="@drawable/btn_common_add" />
 
 </FrameLayout>
