--- a/app/src/main/res/layout/bind_device_ap_list_item.xml
+++ b/app/src/main/res/layout/bind_device_ap_list_item.xml
@@ -7,6 +7,7 @@
     android:clickable="true">
 
     <TextView
+        android:background="?attr/selectableItemBackground"
         android:id="@+id/tv_ap_list_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
